GNOME Bugzilla – Bug 796817
rawvideoparse: fix typo in 'plane-offsets' description
Last modified: 2018-07-16 11:42:45 UTC
.
Created attachment 373061 [details] [review] rawvideoparse: fix typo in 'plane-offsets' description The property is 'plane-offsets', not 'plane-offset' so the example in the description was wrong.
Attachment 373061 [details] pushed as 86b0802 - rawvideoparse: fix typo in 'plane-offsets' description
Also merged to 1.14: cc1f35ffeebba7a9bd523761e53818ed6d80bb39